--- a/outsourcing-vue/package.json
+++ b/outsourcing-vue/package.json
@@ -38,7 +38,9 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "curly": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
