--- a/outsourcing-vue/package.json
+++ b/outsourcing-vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && node src/js/onesignal.js",
     "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
