--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\syfhz\\Documents\\outsourcing\\platformservlet","type":"PROJECT","hints":{"PROJECT_NAME":"platformservlet"}},"com.example:demo:0.0.1"]]
