--- a/platformservlet/pom.xml
+++ b/platformservlet/pom.xml
@@ -122,7 +122,10 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -150,7 +153,7 @@
 			<artifactId>alipay-sdk-java</artifactId>
 			<version>4.8.10.ALL</version>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
@@ -160,7 +163,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<includeSystemScope>true</includeSystemScope>
-					<jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</jvmArguments>
+					<jvmArguments>-Xdebug
+						-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
