--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.184:3306/serviceplatform?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
+spring.datasource.url=jdbc:mysql://localhost:3306/serviceplatform?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
 spring.datasource.username=ccc
 spring.datasource.password=123456
 spring.jpa.show-sql=true
 
 #redis
-spring.redis.host=192.168.1.184
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.jedis.pool.max-idle=8
