--- a/platformservlet/pom.xml
+++ b/platformservlet/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.7.RELEASE</version>
+		
 		<relativePath /> <!-- lookup parent from repository -->
 
 </parent>
@@ -14,6 +15,8 @@
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
+	
+    <packaging>war</packaging><!--<packaging>jar</packaging>-->
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -43,6 +46,12 @@
 			<artifactId>lucene-highlighter</artifactId>
 			<version>4.7.2</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
 
 		<dependency>
