--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ src/test/
 .metadata
 /.recommenders/
 .idea
+platformservlet/payment/alipayCertPublicKey_RSA2.crt
+
+platformservlet/payment/alipayRootCert.crt
+
+platformservlet/payment/
+
+platformservlet/src/test/java/com/DemoApplicationTests.java
