--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://47.94.212.141:3306/serviceplatform?useUnicode
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 #redis
 spring.redis.host=127.0.0.1
@@ -38,7 +39,7 @@ server.tomcat.uri-encoding=UTF-8
 spring.data.solr.host= http://127.0.0.1:8983/solr/new_core
 
 #外网地址
-application.url = http://localhost:8008
+application.url = http://freetunnel.cc:20286
       
 
 
