--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/serviceplatform?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
-spring.datasource.username=ccc
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://47.94.212.141:3306/serviceplatform?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
+spring.datasource.username=root
+spring.datasource.password=Zxcvbnm123..
 spring.jpa.show-sql=true
 
 #redis
@@ -28,6 +28,6 @@ server.tomcat.uri-encoding=UTF-8
 
 #solr
 spring.data.solr.host: http://127.0.0.1:8983/solr/new_core
-      
+
 
 
