修复图片无法显示的问题

--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -28,7 +28,9 @@ spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
 
 #solr
-spring.data.solr.host: http://127.0.0.1:8983/solr/new_core
+spring.data.solr.host= http://127.0.0.1:8983/solr/new_core
 
+#application url
+application.url = http://47.94.212.141:8080
 
 
