--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.94.212.141:3306/serviceplatform?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
+spring.datasource.url=jdbc:mysql://47.94.212.141:3306/service_platform_test?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=FALSE
 spring.datasource.username=root
 spring.datasource.password=Zxcvbnm123..
 spring.jpa.show-sql=true
@@ -30,7 +30,8 @@ server.tomcat.uri-encoding=UTF-8
 #solr
 spring.data.solr.host= http://127.0.0.1:8983/solr/new_core
 
-#application url
-application.url = http://47.94.212.141:8080
+#自定义
+application.alipay.callback.url = http://freetunnel.cc:20286
+application.image.save.folder =
 
 
