--- a/outsourcing-vue/package.json
+++ b/outsourcing-vue/package.json
@@ -40,7 +40,8 @@
       "@vue/standard"
     ],
     "rules": {
-      "curly": "off"
+      "curly": "off",
+      "no-throw-literal": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
