--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ src/test/
 platformservlet/payment/
 
 platformservlet/src/test/java/com/DemoApplicationTests.java
+
+platformservlet/img/user/background/
