--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ platformservlet/payment/
 
 platformservlet/src/test/java/com/DemoApplicationTests.java
 
-platformservlet/img/user/background/
+platformservlet/img/
