修复BUG: 修复了数BUG

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ platformservlet/payment/
 platformservlet/src/test/java/com/DemoApplicationTests.java
 
 platformservlet/img/
+
+platformservlet/file/
