--- a/platformservlet/src/main/resources/application.properties
+++ b/platformservlet/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=Zxcvbnm123..
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
 #redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
@@ -16,22 +15,21 @@ spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-wait=-1
 spring.redis.timeout=3000
 spring.session.store-type=redis
-
 #thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
-
-
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
 server.tomcat.uri-encoding=UTF-8
-
+server.tomcat.max-http-post-size=-1
 #solr
-spring.data.solr.host= http://127.0.0.1:8983/solr/new_core
-
+spring.data.solr.host=http://127.0.0.1:8983/solr/new_core
 #自定义
-application.alipay.callback.url = http://freetunnel.cc:20286
-application.image.save.folder =
+application.alipay.callback.url=http://hair405.natapp1.cc
+application.image.save.folder=
+application.file.save.folder=
 
 
