--- a/outsourcing-vue/package.json
+++ b/outsourcing-vue/package.json
@@ -42,7 +42,8 @@
     ],
     "rules": {
       "curly": "off",
-      "no-throw-literal": 0
+      "no-throw-literal": 0,
+      "space-before-function-paren": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
